Se trabaja en las pestañas tienda e inicio

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,7 +12,7 @@
     <header class="header">
         <nav class="nav">
             <a href="../index.html" class="logo nav-link">
-                <img src="../media/2314633.svg" alt="electricidad-logo-lamparas-cables" class="logo-img">
+                <img src="../media/logo-1.svg" alt="electricidad-logo-lamparas-cables" class="logo-img">
             </a>
             <ul class="nav-menu">
                 <li class="nav-menu-item"><a href="../index.html" class="nav-menu-link nav-link">Inicio</a></li>
@@ -40,10 +40,12 @@
                     <input type="tel" name="telefono" placeholder="Número de contacto">
                     <textarea name="mensaje" placeholder="Escriba aquí su consulta"></textarea>
     
-                    <label for="">
+                    <!-- <label for="">
                         <input type="checkbox" value="checkbox" name="checkbox" class="checkbox">Deseó recibir ofertas y
                         promociones
-                    </label>
+                    </label> -->
+                    <input type="checkbox" value="checkbox" name="checkbox" class="checkbox">
+                    <label for="checkbox">Deseó recibir ofertas y promociones</label>
     
                     <button type="submit" name="enviar" class="button">Enviar</button>
                 </form>
