--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <nav class="nav">
             <a href="./index.html" class="logo nav-link">
-                <img src="./media/2314633.svg" alt="electricidad-logo-lamparas-cables" class="logo-img">
+                <img src="./media/logo-1.svg" alt="electricidad-logo-lamparas-cables" class="logo-img">
             </a>
             <ul class="nav-menu">
                 <li class="nav-menu-item"><a href="./index.html" class="nav-menu-link nav-link">Inicio</a></li>
@@ -24,7 +24,45 @@
         </nav>
     </header>
     <main>
-        
+        <section class="section-inicio">
+            <h3>TIENDA</h3>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil obcaecati quas minus consequuntur minima totam laborum, illo at placeat id ullam delectus modi nam accusamus magni! Eos doloribus sequi temporibus!Aspernatur iusto dolore nihil, necessitatibus corporis accusantium facilis explicabo officiis iure quod id eveniet corrupti! Fugiat magni vel molestiae libero autem neque aliquam ea quod, ab doloribus inventore molestias veniam.</p>
+
+            <div class="section-inicio-link">
+                <a href="./pages/tienda.html"><button type="button" name="tienda" class="section-inicio-button">Visitar Tienda</button></a>
+            </div>
+        </section>
+
+        <section class="section-inicio">
+            <h3>GALERIA</h3>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil obcaecati quas minus consequuntur minima totam laborum, illo at placeat id ullam delectus modi nam accusamus magni! Eos doloribus sequi temporibus!Aspernatur iusto dolore nihil, necessitatibus corporis accusantium facilis explicabo officiis iure quod id eveniet corrupti! Fugiat magni vel molestiae libero autem neque aliquam ea quod, ab doloribus inventore molestias veniam.</p>
+
+            <div class="section-inicio-link">
+                <a href="./pages/galeria.html"><button type="button" name="galeria" class="section-inicio-button">Visitar Galería               </button></a>
+            </div>
+        </section>
+
+        <section class="section-inicio">
+            <h3>SOBRE NOSOTROS</h3>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil obcaecati quas minus consequuntur minima totam laborum, illo at placeat id ullam delectus modi nam accusamus magni! Eos doloribus sequi temporibus!Aspernatur iusto dolore nihil, necessitatibus corporis accusantium facilis explicabo officiis iure quod id eveniet corrupti! Fugiat magni vel molestiae libero autem neque aliquam ea quod, ab doloribus inventore molestias veniam.</p>
+
+            <div class="section-inicio-link">
+                <a href="./pages/sobre-nosotros.html"><button type="button" name="sobre-nosotros" class="section-inicio-button">Sobre nosotros</button></a>
+            </div>
+        </section>
+
+        <section class="section-inicio">
+            <h3>CONTACTO</h3>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil obcaecati quas minus consequuntur minima totam laborum, illo at placeat id ullam delectus modi nam accusamus magni! Eos doloribus sequi temporibus!Aspernatur iusto dolore nihil, necessitatibus corporis accusantium facilis explicabo officiis iure quod id eveniet corrupti! Fugiat magni vel molestiae libero autem neque aliquam ea quod, ab doloribus inventore molestias veniam.</p>
+
+            <div class="section-inicio-link">
+                <a href="./pages/contacto.html"><button type="button" name="contacto" class="section-inicio-button">Contacto</button></a>
+            </div>
+        </section>
     </main>
 </body>
 
