--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -12,7 +12,7 @@
     <header class="header">
         <nav class="nav">
             <a href="../index.html" class="logo nav-link">
-                <img src="../media/2314633.svg" alt="electricidad-logo-lamparas-cables" class="logo-img">
+                <img src="../media/logo-1.svg" alt="electricidad-logo-lamparas-cables" class="logo-img">
             </a>
             <ul class="nav-menu">
                 <li class="nav-menu-item"><a href="../index.html" class="nav-menu-link nav-link">Inicio</a></li>
