Se cambia de estilo a cada uno de las páginas

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Venta de artículos de electricidad domiciliaria">
     <title>Inicio</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -11,7 +12,7 @@
 <body>
     <header class="header">
         <nav class="nav">
-            <a href="./index.html" class="logo nav-link">
+            <a href="./index.html" class="nav-link">
                 <img src="./media/logo-1.svg" alt="electricidad-logo-lamparas-cables" class="logo-img">
             </a>
             <ul class="nav-menu">
@@ -23,9 +24,10 @@
             </ul>
         </nav>
     </header>
-    <main>
+
+    <main class="main-inicio">
         <section class="section-inicio">
-            <h3>TIENDA</h3>
+            <h2>TIENDA</h2>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil obcaecati quas minus consequuntur minima totam laborum, illo at placeat id ullam delectus modi nam accusamus magni! Eos doloribus sequi temporibus!Aspernatur iusto dolore nihil, necessitatibus corporis accusantium facilis explicabo officiis iure quod id eveniet corrupti! Fugiat magni vel molestiae libero autem neque aliquam ea quod, ab doloribus inventore molestias veniam.</p>
 
@@ -35,7 +37,7 @@
         </section>
 
         <section class="section-inicio">
-            <h3>GALERIA</h3>
+            <h2>GALERIA</h2>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil obcaecati quas minus consequuntur minima totam laborum, illo at placeat id ullam delectus modi nam accusamus magni! Eos doloribus sequi temporibus!Aspernatur iusto dolore nihil, necessitatibus corporis accusantium facilis explicabo officiis iure quod id eveniet corrupti! Fugiat magni vel molestiae libero autem neque aliquam ea quod, ab doloribus inventore molestias veniam.</p>
 
@@ -45,7 +47,7 @@
         </section>
 
         <section class="section-inicio">
-            <h3>SOBRE NOSOTROS</h3>
+            <h2>SOBRE NOSOTROS</h2>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil obcaecati quas minus consequuntur minima totam laborum, illo at placeat id ullam delectus modi nam accusamus magni! Eos doloribus sequi temporibus!Aspernatur iusto dolore nihil, necessitatibus corporis accusantium facilis explicabo officiis iure quod id eveniet corrupti! Fugiat magni vel molestiae libero autem neque aliquam ea quod, ab doloribus inventore molestias veniam.</p>
 
@@ -55,7 +57,7 @@
         </section>
 
         <section class="section-inicio">
-            <h3>CONTACTO</h3>
+            <h2>CONTACTO</h2>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil obcaecati quas minus consequuntur minima totam laborum, illo at placeat id ullam delectus modi nam accusamus magni! Eos doloribus sequi temporibus!Aspernatur iusto dolore nihil, necessitatibus corporis accusantium facilis explicabo officiis iure quod id eveniet corrupti! Fugiat magni vel molestiae libero autem neque aliquam ea quod, ab doloribus inventore molestias veniam.</p>
 
