--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -18,11 +18,32 @@
                 <li class="nav-menu-item"><a href="../index.html" class="nav-menu-link nav-link">Inicio</a></li>
                 <li class="nav-menu-item"><a href="./tienda.html" class="nav-menu-link nav-link">Tienda</a></li>
                 <li class="nav-menu-item"><a href="./galeria.html" class="nav-menu-link nav-link">Galería</a></li>
-                <li class="nav-menu-item"><a href="./sobre-nosotros.html" class="nav-menu-link nav-link">Sobre Nosotros</a></li>
+                <li class="nav-menu-item"><a href="./sobre-nosotros.html" class="nav-menu-link nav-link">Sobre
+                        Nosotros</a></li>
                 <li class="nav-menu-item"><a href="./contacto.html" class="nav-menu-link nav-link">Contacto</a></li>
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="galeria-container">
+            <div class="galeria-container-img">
+                <img src="../media/galeria/foto-1.png" alt="">
+                <img src="../media/galeria/foto-2.jfif" alt="">
+                <img src="../media/galeria/foto-3.jfif" alt="">
+                
+            </div>
+            <div class="galeria-container-img">
+                <img src="../media/galeria/foto-4.jfif" alt="">
+                <img src="../media/galeria/foto-5.jfif" alt="">
+                <img src="../media/galeria/foto-6.jfif" alt="">
+            </div>
+            <div class="galeria-container-img">
+                <img src="../media/galeria/foto-7.jfif" alt="">
+                <img src="../media/galeria/foto-8.jfif" alt="">
+                <img src="../media/galeria/foto-9.jfif" alt="">
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
