--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -26,7 +26,8 @@
     <main>
         <h2 class="nosotros-h2">¿Quiénes somos?</h2>
         <div class="nosotros-video">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/NDf5YOC0Y_s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="860" height="515" src="https://www.youtube.com/embed/NDf5YOC0Y_s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/NDf5YOC0Y_s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
         </div>
     </main>
 </body>
