--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -25,7 +25,39 @@
         </nav>
     </header>
     <main>
-        <div class="galeria-container">
+        <section class="section-galeria">
+            <div class="galeria-container">
+                <div class="galeria-box">
+                    <img src="../media/galeria/foto-1.png" alt="">
+                </div>
+                <div class="galeria-box">
+                    <img src="../media/galeria/foto-2.jfif" alt="">
+                </div>
+                <div class="galeria-box">
+                    <img src="../media/galeria/foto-3.jfif" alt="">
+                </div>
+                <div class="galeria-box">
+                    <img src="../media/galeria/foto-4.jfif" alt="">
+                </div>
+                <div class="galeria-box">
+                    <img src="../media/galeria/foto-5.jfif" alt="">
+                </div>
+                <div class="galeria-box">
+                    <img src="../media/galeria/foto-6.jfif" alt="">
+                </div>
+                <div class="galeria-box">
+                    <img src="../media/galeria/foto-7.jfif" alt="">
+                </div>
+                <div class="galeria-box">
+                    <img src="../media/galeria/foto-8.jfif" alt="">
+                </div>
+                <div class="galeria-box">
+                    <img src="../media/galeria/foto-9.jfif" alt="">
+                </div>
+            </div>
+        </section>
+
+        <!-- <div class="galeria-container">
             <div class="galeria-container-img">
                 <img src="../media/galeria/foto-1.png" alt="">
                 <img src="../media/galeria/foto-2.jfif" alt="">
@@ -36,13 +68,14 @@
                 <img src="../media/galeria/foto-4.jfif" alt="">
                 <img src="../media/galeria/foto-5.jfif" alt="">
                 <img src="../media/galeria/foto-6.jfif" alt="">
+                
             </div>
             <div class="galeria-container-img">
                 <img src="../media/galeria/foto-7.jfif" alt="">
                 <img src="../media/galeria/foto-8.jfif" alt="">
                 <img src="../media/galeria/foto-9.jfif" alt="">
             </div>
-        </div>
+        </div> -->
     </main>
 </body>
 
