--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -27,55 +27,17 @@
     <main>
         <section class="section-galeria">
             <div class="galeria-container">
-                <div class="galeria-box">
-                    <img src="../media/galeria/foto-1.png" alt="">
-                </div>
-                <div class="galeria-box">
-                    <img src="../media/galeria/foto-2.jfif" alt="">
-                </div>
-                <div class="galeria-box">
-                    <img src="../media/galeria/foto-3.jfif" alt="">
-                </div>
-                <div class="galeria-box">
-                    <img src="../media/galeria/foto-4.jfif" alt="">
-                </div>
-                <div class="galeria-box">
-                    <img src="../media/galeria/foto-5.jfif" alt="">
-                </div>
-                <div class="galeria-box">
-                    <img src="../media/galeria/foto-6.jfif" alt="">
-                </div>
-                <div class="galeria-box">
-                    <img src="../media/galeria/foto-7.jfif" alt="">
-                </div>
-                <div class="galeria-box">
-                    <img src="../media/galeria/foto-8.jfif" alt="">
-                </div>
-                <div class="galeria-box">
-                    <img src="../media/galeria/foto-9.jfif" alt="">
-                </div>
+                <img src="../media/galeria/foto-1.png" alt="" class="galeria-container-img">
+                <img src="../media/galeria/foto-2.jfif" alt="" class="galeria-container-img">
+                <img src="../media/galeria/foto-3.jfif" alt="" class="galeria-container-img">
+                <img src="../media/galeria/foto-4.jfif" alt="" class="galeria-container-img">
+                <img src="../media/galeria/foto-5.jfif" alt="" class="galeria-container-img">
+                <img src="../media/galeria/foto-6.jfif" alt="" class="galeria-container-img">
+                <img src="../media/galeria/foto-7.jfif" alt="" class="galeria-container-img">
+                <img src="../media/galeria/foto-8.jfif" alt="" class="galeria-container-img">
+                <img src="../media/galeria/foto-9.jfif" alt="" class="galeria-container-img">
             </div>
         </section>
-
-        <!-- <div class="galeria-container">
-            <div class="galeria-container-img">
-                <img src="../media/galeria/foto-1.png" alt="">
-                <img src="../media/galeria/foto-2.jfif" alt="">
-                <img src="../media/galeria/foto-3.jfif" alt="">
-                
-            </div>
-            <div class="galeria-container-img">
-                <img src="../media/galeria/foto-4.jfif" alt="">
-                <img src="../media/galeria/foto-5.jfif" alt="">
-                <img src="../media/galeria/foto-6.jfif" alt="">
-                
-            </div>
-            <div class="galeria-container-img">
-                <img src="../media/galeria/foto-7.jfif" alt="">
-                <img src="../media/galeria/foto-8.jfif" alt="">
-                <img src="../media/galeria/foto-9.jfif" alt="">
-            </div>
-        </div> -->
     </main>
 </body>
 
