Se terminan los detalles en la barra de navegación

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 </head>
 
 <body>
-    <header class="header">
+    <header>
         <nav class="nav">
-            <a href="./index.html" class="nav-link">
-                <img src="./media/logo-1.svg" alt="electricidad-logo-lamparas-cables" class="logo-img">
+            <a href="./index.html" class="nav-logo">
+                <img src="./media/logo-1.svg" alt="">
             </a>
-            <ul class="nav-menu">
-                <li class="nav-menu-item"><a href="./index.html" class="nav-menu-link nav-link">Inicio</a></li>
-                <li class="nav-menu-item"><a href="./pages/tienda.html" class="nav-menu-link nav-link">Tienda</a></li>
-                <li class="nav-menu-item"><a href="./pages/galeria.html" class="nav-menu-link nav-link">Galería</a></li>
-                <li class="nav-menu-item"><a href="./pages/sobre-nosotros.html" class="nav-menu-link nav-link">Sobre Nosotros</a></li>
-                <li class="nav-menu-item"><a href="./pages/contacto.html" class="nav-menu-link nav-link">Contacto</a></li>
+            <ul class="nav-ul">
+                <li  class="nav-li"><a href="./index.html" class="nav-link">Inicio</a></li>
+                <li  class="nav-li"><a href="./pages/tienda.html" class="nav-link">Tienda</a></li>
+                <li  class="nav-li"><a href="./pages/galeria.html" class="nav-link">Galería</a></li>
+                <li  class="nav-li"><a href="./pages/sobre-nosotros.html" class="nav-link">Sobre nosotros</a></li>
+                <li  class="nav-li"><a href="./pages/contacto.html" class="nav-link">Contacto</a></li>
             </ul>
         </nav>
     </header>
