--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -9,17 +9,17 @@
 </head>
 
 <body>
-    <header class="header">
+    <header>
         <nav class="nav">
-            <a href="../index.html" class="logo nav-link">
-                <img src="../media/logo-1.svg" alt="electricidad-logo-lamparas-cables" class="logo-img">
+            <a href="./index.html" class="nav-logo">
+                <img src="../media/logo-1.svg" alt="">
             </a>
-            <ul class="nav-menu">
-                <li class="nav-menu-item"><a href="../index.html" class="nav-menu-link nav-link">Inicio</a></li>
-                <li class="nav-menu-item"><a href="./tienda.html" class="nav-menu-link nav-link">Tienda</a></li>
-                <li class="nav-menu-item"><a href="./galeria.html" class="nav-menu-link nav-link">Galería</a></li>
-                <li class="nav-menu-item"><a href="./sobre-nosotros.html" class="nav-menu-link nav-link">Sobre Nosotros</a></li>
-                <li class="nav-menu-item"><a href="./contacto.html" class="nav-menu-link nav-link">Contacto</a></li>
+            <ul class="nav-ul">
+                <li class="nav-li"><a href="../index.html" class="nav-link">Inicio</a></li>
+                <li class="nav-li"><a href="./tienda.html" class="nav-link">Tienda</a></li>
+                <li class="nav-li"><a href="./galeria.html" class="nav-link">Galería</a></li>
+                <li class="nav-li"><a href="./sobre-nosotros.html" class="nav-link">Sobre nosotros</a></li>
+                <li class="nav-li"><a href="./contacto.html" class="nav-link">Contacto</a></li>
             </ul>
         </nav>
     </header>
